--- a/ex3/index.html
+++ b/ex3/index.html
@@ -1,12 +1,28 @@
 <!DOCTYPE html>
 <html lang='en'>
+
 <head>
     <meta charset='UTF-8'>
     <meta http-equiv='X-UA-Compatible' content='IE=edge'>
     <meta name='viewport' content='width=device-width, initial-scale=1.0'>
     <title>Document</title>
 </head>
+
 <body>
-    
+    <h1>Formulaire</h1>
+    <div class="mb-3">
+
+        <label for="" class="form-label">Prénom :</label><br>
+        <input type="text" class="form-control" name="" id="" placeholder="Ryad"><br>
+        <label for="" class="form-label">Nom :</label><br>
+        <input type="text" class="form-control" name="" id="" placeholder="Rif Agznay"><br>
+        <label for="" class="form-label">Email :</label><br>
+        <input type="email" class="form-control" name="" id="" placeholder="abc@mail.com"><br>
+        <label for="" class="form-label">Sujet :</label><br>
+        <input type="text" class="form-control" name="" id=""><br>
+        <label for="" class="form-label">Message :</label><br>
+        <textarea class="form-control" id="" rows="3"></textarea>
+    </div>
 </body>
+
 </html>
